<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar_description">Author avatar</string>
    <string name="post_name">Netology. University of the Internet Profession</string>
    <string name="date">May 21 at 18:36</string>
    <string name="text_post"><![CDATA[Hi, this is a new Netology! Once upon a time, Netology began with intensive courses in online marketing. Then there were courses in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes them want more, run faster. Our mission is to help us embark on the path of growth and start a chain of changes -> http//netolo.gy/fyb]]></string>
    <string name="quantity_likes">500</string>
    <string name="quantity_share">500</string>
    <string name="quantity_viewed">500</string>

</resources>