<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        app:srcCompat="@drawable/netology"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/avatar_description"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/authorName"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/options"
        android:text="@string/post_name"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintEnd_toEndOf="@id/authorName"/>

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_options_24dp"
        android:background="@android:color/transparent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="authorName, avatar, date, options"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        android:text="@string/text_post"/>

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/likesItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_likes_24dp"
        app:layout_constraintTop_toBottomOf="@id/text"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/quantityLikes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginVertical="2dp"
        app:layout_constraintTop_toTopOf="@id/likesItem"
        app:layout_constraintStart_toEndOf="@id/likesItem"
        app:layout_constraintEnd_toStartOf="@id/shareItem"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/quantity_likes"/>

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/shareItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:srcCompat="@drawable/ic_share_24dp"
        app:layout_constraintTop_toTopOf="@id/likesItem"
        app:layout_constraintStart_toEndOf="@id/likesItem" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/quantityShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginVertical="2dp"
        app:layout_constraintTop_toTopOf="@id/shareItem"
        app:layout_constraintStart_toEndOf="@id/shareItem"
        app:layout_constraintEnd_toStartOf="@id/viewedItem"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/quantity_share"/>

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/viewedItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintTop_toTopOf="@id/shareItem"
        app:srcCompat="@drawable/ic_viewed_24dp"

        app:layout_constraintEnd_toEndOf="@id/quantityViewed"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/quantityViewed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginVertical="2dp"
        app:layout_constraintTop_toTopOf="@id/viewedItem"
        app:layout_constraintStart_toEndOf="@id/viewedItem"
        app:layout_constraintEnd_toEndOf="parent"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/quantity_viewed"/>



</androidx.constraintlayout.widget.ConstraintLayout>
